force-app/main/default/objects/dupcheck__dc3GenericStorage__c/dupcheck__dc3GenericStorage__c.object-meta.xml
<CustomObject>
    <label>Plauti Deduplicate Generic Storage</label>
    <nameField>
        <label>Plauti Deduplicate Generic Storage Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Plauti Deduplicate Generic Storage</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>