force-app/main/default/objects/dupcheck__dc3GenericStorage__c/fields/dupcheck__Key__c.field-meta.xml
<CustomField>
    <fullName>dupcheck__Key__c</fullName>
    <description>Contains the key of the configuration</description>
    <label>Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>