force-app/main/default/objects/dupcheck__dc3GenericStorage__c/fields/dupcheck__Payload__c.field-meta.xml
<CustomField>
    <fullName>dupcheck__Payload__c</fullName>
    <description>Contains partial payload for configuration</description>
    <label>Payload</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>