force-app/main/default/objects/dupcheck__dc3GenericStorage__c/fields/dupcheck__SortOrder__c.field-meta.xml
<CustomField>
    <fullName>dupcheck__SortOrder__c</fullName>
    <description>Indicated the order the payload has to be put together</description>
    <label>Sort Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>