force-app/main/default/objects/dupcheck__dc3GenericStorage__c/fields/dupcheck__Status__c.field-meta.xml
<CustomField>
    <fullName>dupcheck__Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ACTIVE</fullName>
            </value>
            <value>
                <fullName>INACTIVE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>