force-app/main/default/objects/dupcheck__dc3GenericStorage__c/fields/dupcheck__Type__c.field-meta.xml
<CustomField>
    <fullName>dupcheck__Type__c</fullName>
    <description>Sets the type of configuration stored in the payload</description>
    <label>Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>