force-app/main/default/objects/dupcheck__dc3GenericStorage__c/fields/dupcheck__Version__c.field-meta.xml
<CustomField>
    <fullName>dupcheck__Version__c</fullName>
    <description>Contains the version of the configuration stored</description>
    <label>Version</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>